<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context=".ForgotPassword">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@color/primaryDarkColor">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"

                    android:layout_gravity="center"
                    android:src="@drawable/forogot_password_icon" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/text1_forgot_passwd"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textAlignment="center"
                    android:paddingHorizontal="30dp"
                    android:text="@string/text2_forgot_passwd"
                    android:textSize="16sp" />

                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="25dp"
                    android:padding="8dp"
                    app:cardBackgroundColor="@color/primaryDarkColor"
                    app:cardCornerRadius="10dp">

                <LinearLayout
                    android:id="@+id/kirim_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:src="@drawable/email_icon"
                        android:layout_marginLeft="10dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="admin@inkubatorbayi.com"

                        android:gravity="center"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:padding="8dp"/>

                </LinearLayout>
                </android.support.v7.widget.CardView>


                <Button
                    android:id="@+id/bcktologin"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dip"
                    android:background="@null"
                    android:layout_marginBottom="10dip"
                    android:text="@string/btn_backlogin"
                    android:textAllCaps="false"
                    android:textColor="@color/btn_green_backlogin"
                    android:textSize="15dp" />


            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>